--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,10 @@
 	<%= yield :search_script %>
 </body>
 	<footer class="footer">
-		<div class="row" style="margin-bottom: 50px;">
+		<div class="row footer-link" style="margin-bottom: 50px;">
 			<div class="col-md-2 col-md-offset-2" style="padding-left: 3vw;">
 				<h4 class="bold">Company</h4>
-				<p><a class="footer-link" href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">About</a></p>
+				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">About</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Jobs</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Press</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Blog</a></p>
