--- a/app/assets/templates/meals/search_content.jst.ejs
+++ b/app/assets/templates/meals/search_content.jst.ejs
@@ -100,7 +100,7 @@
 							<% } else if (item === "start_date" || item === "end_date") { %>
 								<span class="glyphicon glyphicon-calendar"> </span>
 							<% } else if (item === "min_price" || item === "max_price") { %>
-								<span class="glyphicon" style="font-weight: bold;"> &dollar;</span>
+								<span class="glyphicon" style="font-size: 25px; font-weight: bold; margin-top: -7px;">$</span>
 							<% } %>
 						</b>
 						<button data-filter="<%= item %>" type="button" class="close btn remove-filter"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -156,23 +156,27 @@
 			<div class="col-md-4 col-md-offset-1" style="padding-left: 5px;">
 			<nav>
 			  <ul class="pagination">
-					<% if (page_num !== 1) { %>
-			    <li><a style="color: #A34775;" data-page="0" href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+					<% if (page_num === 1) { %>
+			    <li><a class="disabled" style="color: #A34775;" data-page="0" href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
+					<% } else { %>
+						<li><a class="page" style="color: #A34775;" data-page="0" href="#"><span aria-hidden="true">&laquo;</span><span class="sr-only">Previous</span></a></li>
 					<% } %>
 					<% if (page_num > 2) { %>
-						<li><a style="color: #A34775;" data-page="1" href="#"> 1 </a></li>
+						<li><a class="page" style="color: #A34775;" data-page="1" href="#"> 1 </a></li>
 					  <li> <span class="gap" style=""> ... </span></li>
 					<% } %>
-			    <li><a style="color: #A34775; background-color: #e7e7e7;" data-page="<%= page_num %>" href="#"><%= page_num %></a></li>
+			    <li><a class="page" style="color: #A34775; font-weight: bold;" data-page="<%= page_num %>" href="#"><%= page_num %></a></li>
 					<% if (meals.total_pages >= page_num + 1) { %>
-			    <li><a style="color: #A34775;" data-page="<%= page_num + 1 %>" href="#"><%= page_num + 1 %></a></li>
+			    <li><a class="page" style="color: #A34775;" data-page="<%= page_num + 1 %>" href="#"><%= page_num + 1 %></a></li>
 					<% } %>
 					<% if (page_num + 2 < meals.total_pages) { %>
 						<li> <span class="gap" style=""> ... </span></li>
-						<li><a style="color: #A34775;" data-page="<%= meals.total_pages %>" href="#"> <%= meals.total_pages %> </a></li>
+						<li><a class="page" style="color: #A34775;" data-page="<%= meals.total_pages %>" href="#"> <%= meals.total_pages %> </a></li>
 					<% } %>
 					<% if (meals.total_pages >= page_num + 2) { %>
-			    <li><a style="color: #A34775;" data-page="-1" href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+			    <li><a class="page" style="color: #A34775;" data-page="-1" href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
+					<% } else { %>
+					 <li><a class="disabled" style="color: #A34775;" data-page="-1" href="#"><span aria-hidden="true">&raquo;</span><span class="sr-only">Next</span></a></li>
 					<% } %>
 			  </ul>
 			</nav>
