--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,9 +19,9 @@
 						<div class='form-group'>
 							<input id="header-lat" type="hidden" name="lat">
 							<input id="header-lng" type="hidden" name="lng">
-							<input style="border-radius: 0px; -webkit-appearance: none; width: 230px; float: left;" type='text' id='location-header' class='form-control' name='location' placeholder='Location'>
+							<input style="border-radius: 0px; -webkit-appearance: none; width: 230px; float: left;" type='text' id='location-header' class='form-control search-bar' name='location' placeholder='Location'>
 						</div>
-						<button style="border-radius: 0px; -webkit-appearance: none; float: right;" type='submit' id="button-header" class='btn btn-default' data-toggle="tooltip" data-placement="bottom" title="Get started by searching for meals in San Francisco, or Sunnyvale.">Search</button>
+						<button style="border-radius: 0px; -webkit-appearance: none; float: right;" type='submit' id="button-header" class='search-button btn btn-default' data-toggle="tooltip" data-placement="bottom" title="Get started by searching for meals in San Francisco, or Sunnyvale.">Search</button>
 					</form>
 				</li>
 								
