--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,12 @@
 	
 	<%= yield %>
 	
-	<!-- <div class="before-footer">
-	</div> -->
-	
 	<%= yield :search_script %>
 </body>
 	<footer class="footer">
-		<div class="row footer-link" style="margin-bottom: 50px;">
-			<div class="col-md-2 col-md-offset-2" style="padding-left: 3vw;">
+		<div style="display: flex; justify-content: center; width: 80vw; margin: 0 auto;">
+
+			<div style="width: 33vw; text-align: center;">
 				<h4 class="bold">Company</h4>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">About</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Jobs</a></p>
@@ -34,7 +32,8 @@
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Blog</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Help</a></p>
 			</div>
-			<div class="col-md-3 col-md-offset-1" style="padding-left: 4vw;">
+
+			<div style="width: 33vw; text-align: center;">
 				<h4 class="bold">Discover</h4>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Mobile</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Trust & Safety</a></p>
@@ -42,7 +41,8 @@
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Yumster Picks</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Site Map</a></p>
 			</div>
-			<div class="col-md-3" style="padding-left: 5vw;">
+
+			<div style="width: 33vw; text-align: center;">
 				<h4 class="bold">Hosting</h4>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Why Host</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Hospitality</a></p>
@@ -50,28 +50,24 @@
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Home Safety</a></p>
 				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Stories</a></p>
 			</div>
+			
 		</div>
 		
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 footer-contact">
 				
-				<div class="row">
-					<div class="col-md-2 col-md-offset-5">
-				    <h4 class="bold"> Join Us On </h4>
-					</div>
+				<div style="text-align: center;">
+				  <h4 class="bold"> Join Us On </h4>
 				</div>
+
 				
-				<div class="row">
-					<div class="col-md-2 col-md-offset-5">
-						<a href="https://github.com/azorko" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/github.png');"></a>
-						<a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/linked_in.png');"></a>
-					</div>
-				</div>		
-				
-				<div class="row">
-					<div class="col-md-4 col-md-offset-4">
-				    <p class="text-muted" style="margin: 15px;"> 2014 yumster. All rights reserved. </p>
-					</div>
+				<div style="display: flex; justify-content: center; overflow: auto;">
+				  <a href="https://github.com/azorko" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/github.png');"></a>
+					<a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/linked_in.png');"></a>
+				</div>
+	
+				<div style="text-align: center; margin: 15px 0 0 0;">
+				  <span class="text-muted"> 2014 yumster. All rights reserved. </span>
 				</div>
 						
 				</div>
