--- a/app/assets/templates/users/show.jst.ejs
+++ b/app/assets/templates/users/show.jst.ejs
@@ -5,11 +5,9 @@
 			<div class="cover-photo" style="background-image: url('<%= user.host_meals().models[0].get("photo_url") %>');">
 			</div>
 			<% } %>
-			<div class="row click-header" style="">
-				<div class="col-md-6 col-md-offset-5" style="padding-left: 0px;">
+			<div class="click-header" style="display: flex; justify-content: center;">
 					<span data-action="meals" class="header-button"> Meals </span>
 					<span data-action="listings" class="header-button"> Listings </span>
-				</div>
 			</div>
 		</div>
 		<div class="row">
