--- a/app/assets/templates/home/home.jst.ejs
+++ b/app/assets/templates/home/home.jst.ejs
@@ -107,7 +107,7 @@
 			<div class="meal-blurb">
 				<p class="tag"><%= meal.get("tag") %></p>
 					<p> <%= meal.get("title") %> </p>
-						<p style="font-size: 10px;">
+						<p class="address-price" style="font-size: 10px;">
 							<span style="float: left; width: 10vw;"> @<%= host.get('address') %> </span>
 							<span style="float: right;">$<%= meal.get('price') %>/p </span>
 						</p>
