--- a/app/assets/templates/meals/search_content.jst.ejs
+++ b/app/assets/templates/meals/search_content.jst.ejs
@@ -142,7 +142,7 @@
 					<div class="meal-blurb">
 						<p class="tag"><%= meals.models[i].get("tag") %></p>
 							<p> <%= meals.models[i].get("title") %> </p>
-								<p style="font-size: 10px;">
+								<p class="address-price" style="font-size: 10px;">
 									<span style="float: left; width: 10vw;"> @<%= host.get('address') %> </span>
 									<span style="float: right;">$<%= meals.models[i].get('price') %>/p </span>
 								</p>
