--- a/app/assets/templates/meals/search_content.jst.ejs
+++ b/app/assets/templates/meals/search_content.jst.ejs
@@ -132,7 +132,7 @@
 					<% mealPhoto = meals.models[i].get("photo_url") %>
 				<% } %>
 				
-				<div data-listing-num="<%= i %>" class="col-md-3 meal-info" data-id ="<%= host.get('id') %>" style="background-image: url('<%= mealPhoto %>'); margin-left: 10px 10px 20px 10px;">
+				<div data-listing-num="<%= i %>" class="col-md-3 meal-info" data-id ="<%= host.get('id') %>" style="background-image: url('<%= mealPhoto %>');">
 					<div class="host-profile">
 						<img src="<%= host.get('photo_url') %>" class= "host-pic">
 						<span style="float: left; margin-left: 5px;">
