--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -125,6 +125,7 @@ font-family: 'Quicksand', sans-serif;
 	font-family: 'Quicksand', sans-serif;
 	outline: 1px solid #cccccc;
 	padding: 10px;
+	float: left;
 }
 
 .meal-info:hover {
@@ -360,7 +361,7 @@ footer h4 {
 
 .indiv-rating {
 	width: 100%;
-	height: 15vh;
+	height: auto;
 	overflow: auto;
 	border-bottom: 1px solid #e7e7e7;
 	min-height: 125px;
