--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,76 +1,80 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Yumster</title>
 	<link rel="shortcut icon" href="https://s3-us-west-1.amazonaws.com/yumster/favicon.ico" >
 	<%= stylesheet_link_tag    "application", media: "all" %>
 	<%= javascript_include_tag "application" %>
 	<%= csrf_meta_tags %>
-	
-	
-	<script type="text/javascript"
-	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChbqdw1gU-hpEvqKLORMf79jSZ15DM-bM&libraries=places,geometry">
-	</script>
-	
-	
 </head>
+
 <body>
 	<%= render partial: "layouts/header" %>
 	
 	<%= yield %>
 	
 	<%= yield :search_script %>
+	
+	<script type="text/javascript"
+	src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChbqdw1gU-hpEvqKLORMf79jSZ15DM-bM&libraries=places,geometry">
+	</script>
 </body>
-	<footer class="footer">
-		<div style="display: flex; justify-content: center; width: 80vw; margin: 0 auto;">
 
-			<div style="width: 33vw; text-align: center;">
-				<h4 class="bold">Company</h4>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">About</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Jobs</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Press</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Blog</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Help</a></p>
-			</div>
+<footer class="footer">
+	
+<div class="row" style="display: table; display: flex; justify-content: center; width: 80vw; margin: 0 auto;">
+  <div style="display: table-row;">
+		<div style="display: table-cell; width: 33vw; text-align: center;">
+			<h4 class="bold">Company</h4>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">About</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Jobs</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Press</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Blog</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Help</a></p>
+		</div>
 
-			<div style="width: 33vw; text-align: center;">
-				<h4 class="bold">Discover</h4>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Mobile</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Trust & Safety</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Invite Friends</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Yumster Picks</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Site Map</a></p>
-			</div>
+		<div style="display: table-cell; width: 33vw; text-align: center;">
+			<h4 class="bold">Discover</h4>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Mobile</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Trust & Safety</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Invite Friends</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Yumster Picks</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Site Map</a></p>
+		</div>
 
-			<div style="width: 33vw; text-align: center;">
-				<h4 class="bold">Hosting</h4>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Why Host</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Hospitality</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Responsible Hosting</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Home Safety</a></p>
-				<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Stories</a></p>
-			</div>
+		<div style="display: table-cell; width: 33vw; text-align: center;">
+			<h4 class="bold">Hosting</h4>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Why Host</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Hospitality</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Responsible Hosting</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Home Safety</a></p>
+			<p><a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285">Stories</a></p>
+		</div>
+	</div>
+</div>
+	
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2 footer-contact">
 			
+			<div style="text-align: center;">
+			  <h4 class="bold"> Join Us On </h4>
+			</div>
+
+			<div style="display: flex; justify-content: center; overflow: auto;">
+				<div style="width: 100px; margin: 0 auto;">
+			  <a href="https://github.com/azorko" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/github.png');"></a>
+				<a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/linked_in.png');"></a>
+				</div>
+			</div>
+
+			<div style="text-align: center; margin: 15px 0 0 0;">
+			  <span class="text-muted"> 2014 yumster. All rights reserved. </span>
+			</div>
+					
+			</div>
 		</div>
 		
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2 footer-contact">
-				
-				<div style="text-align: center;">
-				  <h4 class="bold"> Join Us On </h4>
-				</div>
+</footer>
 
-				
-				<div style="display: flex; justify-content: center; overflow: auto;">
-				  <a href="https://github.com/azorko" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/github.png');"></a>
-					<a href="https://www.linkedin.com/pub/anastasia-zorko/5a/632/285" class="footer-icon" style="background-image: url('https://s3-us-west-1.amazonaws.com/yumster/linked_in.png');"></a>
-				</div>
-	
-				<div style="text-align: center; margin: 15px 0 0 0;">
-				  <span class="text-muted"> 2014 yumster. All rights reserved. </span>
-				</div>
-						
-				</div>
-			</div>
-	</footer>
 </html>
